--- a/Module 02 Ma permière application/demo-17-ma-premiere-application.html
+++ b/Module 02 Ma permière application/demo-17-ma-premiere-application.html
@@ -2,7 +2,7 @@
 <br><br>
 <button onclick="afficher()">GO</button>
 <br><br>
-<h1 id="titre1"></h1>
+<h1 id="titre1">Titre</h1>
 <script>
 function afficher(){
     // lecture
