--- a/Module 04 Enlever une balise/TP 03 panier de fruits/maquette-liste-de-fruits.html
+++ b/Module 04 Enlever une balise/TP 03 panier de fruits/maquette-liste-de-fruits.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script03.js" defer></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,13 +44,13 @@
             />
           </div>
           <div class="col-2">
-            <button class="btn btn-success" id="btnAjouter">
+            <button class="btn btn-success" id="btnAjouter"onclick(ajouter)>
               <i class="fa fa-plus"></i>
             </button>
           </div>
         </div>
         <!-- table.table>tr>thead>th*2 -->
-        <table class="table table-striped mt-4">
+        <table class="table table-striped mt-4" id="myTable">
           <thead>
             <tr>
               <th>Fruit</th>
@@ -61,25 +62,23 @@
             <tr>
               <td>pomme</td>
               <td>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" onclick="remove(this)">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
             </tr>
-          
             <tr>
               <td>poire</td>
               <td>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" onclick="remove(this)">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
             </tr>
-          
             <tr>
               <td>cerise</td>
               <td>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" onclick="remove(this)">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
